# compytroller

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  client.py  example_usage.ipynb  exceptions.py  pyproject.toml  requirements.txt  resources.py  setup.py  socrata.py
data/: resources.py
data/mixed_beverage/: mixed_beverage_history.py
data/responses/: franchise_tax.py  mixed_beverage_tax.py  sales_tax.py
data/sales_tax/: allocation_history.py  allocations.py  comparison_summaries.py  direct_pay.py  marketplace_provider_allocations.py  quarterly_sales_history.py  rates.py  single_local_allocations.py  single_local_tax_rates.py
docs/: API.md  DATA_SOURCES.md  DEVELOPMENT.md  EXAMPLES.md
responses/: sales_tax.py
sales_tax/: active_permits.py  allocations.py  comparison_summaries.py  direct_pay.py  marketplace_providers.py  permitted_locations.py  rates.py  single_local_allocations.py
src/compytroller/: client.py  exceptions.py  socrata.py
src/compytroller/fields/: __init__.py  franchise_tax.py  sales_tax.py
src/compytroller/resources/: __init__.py  resources.py
src/compytroller/resources/franchise/: active_permit_holders.py
src/compytroller/resources/mixed_beverage/: gross_receipts.py  history.py
src/compytroller/resources/sales_tax/: active_permits.py  allocation_history.py  allocation_payment_detail.py  city_county_comparison_summary.py  county_spd_mta_allocations.py  direct_pay.py  marketplace_provider.py  marketplace_provider_allocations.py  permitted_locations.py  quarterly_sales_history.py  rates.py  single_local_allocations.py  single_local_tax_rates.py
src/compytroller/responses/: franchise_tax.py  mixed_beverage_tax.py  sales_tax.py
src/data/: __init__.py  client.py  exceptions.py  socrata.py  utils.py
src/data/fields/: __init__.py  _base.py  mixed_beverage.py
src/data/resources/: resources.py
src/data/resources/franchise/: active_permit_holders.py
src/data/resources/mixed_beverage/: gross_receipts.py  history.py
src/data/resources/sales_tax/: active_permits.py  allocation_history.py  allocation_payment_detail.py  city_county_comparison_summary.py  comparison_summary.py  county_city_mta_allocations.py  county_spd_mta_allocations.py  direct_pay.py  marketplace_provider.py  marketplace_provider_allocations.py  permitted_locations.py  quarterly_sales_history.py  rates.py  single_local_allocations.py  single_local_tax_rates.py
src/data/responses/: __init__.py  franchise_tax.py  mixed_beverage_tax.py  sales_tax.py
tests/: conftest.py  test_client.py  test_exceptions.py  test_fields.py  test_franchise_tax.py  test_mixed_beverage_tax.py  test_resources.py  test_sales_tax.py  test_socrata_client.py  test_utils.py
tests/franchise_tax/: test_active_permit_holders.py
tests/mixed_beverage_tax/: test_mixed_beverage_gross_receipts.py  test_mixed_beverage_history.py
tests/sales_tax/: test_active_permits.py  test_allocation_history.py  test_allocation_payment_detail.py  test_county_spd_mta_allocations.py  test_direct_pay_taxpayers.py  test_marketplace_provider_allocations.py  test_marketplace_providers.py  test_permitted_locations.py  test_quarterly_sales.py  test_sales_tax_rates.py  test_sales_tax_summary.py  test_single_local_allocations.py  test_single_local_tax_rates.py
